tests/fixtures/positive/modifiers/TestClassIsParallel.cls
@IsTest(IsParallel=true)
public class MyTestClass {}

