tests/fixtures/negative/best-practices/TestClassIsParallelRestrictions.cls
@IsTest
public class TestWithoutParallel {
    @IsTest
    static void myTestMethod() {
        Account acc = new Account(Name = 'Test');
        insert acc;
    }
}

